{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "888270ae-437f-4c54-92b0-bca670b49e27",
            "actions": [
                {
                    "name": "LeftLeverUp",
                    "type": "Button",
                    "id": "78335eb2-354d-48fd-bd8b-13763bc4b73a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftLeverDown",
                    "type": "Button",
                    "id": "8967f063-565e-47fd-a720-f4f4d8ccf2df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightLeverUp",
                    "type": "Button",
                    "id": "cf2154ef-50b3-4255-b4fb-ed61a754f493",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightLeverDown",
                    "type": "Button",
                    "id": "911e0712-0246-43ee-b2f6-76159a04cc8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "79bc387a-f85d-4f57-9cc2-264d9e00056c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftDial",
                    "type": "Value",
                    "id": "6f7096b0-4684-402d-9624-8c2e88b38a70",
                    "expectedControlType": "Stick",
                    "processors": "StickDeadzone(min=0.9,max=0.925)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightDial",
                    "type": "Value",
                    "id": "1659953b-a9a8-49de-b755-94cb6c343c98",
                    "expectedControlType": "Stick",
                    "processors": "StickDeadzone(min=0.9,max=0.925)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "29cceefa-c0f7-47f8-82ab-0a6cb4c8cb35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reloaded",
                    "type": "Button",
                    "id": "f2f4406f-3c74-4194-99e0-e130d1e82186",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeTypeOfBullet",
                    "type": "Button",
                    "id": "727f88e6-7cd9-48b2-92ab-ffd44aaa9076",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookAtSights",
                    "type": "Button",
                    "id": "c8ff84f3-d5a6-4b06-b856-2f24f5ea41bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookOut",
                    "type": "Button",
                    "id": "b69e6b5c-a21e-4ae1-b85f-98fe949e7e4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "952121c7-91e0-421d-8d66-5ae7196ae6ff",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftLeverUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95fbc601-538e-42a9-bfa8-c0cc7274d2de",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RightLeverUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "216cada0-7c70-4617-b57d-f38cbb172cc9",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RightLeverDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b422549d-f196-4ecd-bfae-391f6531fa0a",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftLeverDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "499892d4-5782-4bde-ad52-161bb89529fc",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9608dfe-3131-4c34-923e-c0c776b63951",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftDial",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71e406a0-72ff-47c5-93fc-81a353e443f6",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RightDial",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b4b89ee-23cf-44a1-8eb4-e868d4e9fe7d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0f38f1e-aadb-4490-86c1-d80c1e14fb5f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Reloaded",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf874a51-afb0-41bc-b0b8-940bb6f0e72b",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChangeTypeOfBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81f44745-2859-4093-8fbb-432c032615aa",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAtSights",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b671c26-a202-4efc-9b75-7c1861fd128a",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Hangar",
            "id": "3f379c86-ed51-40b7-a9a6-a89a4b756286",
            "actions": [
                {
                    "name": "VerticalMove",
                    "type": "Value",
                    "id": "65815458-cdb8-4eec-a4c4-9dfb43ea53cd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "052c859b-5004-404d-8e5b-ba7759a46a16",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "0fbb5bff-b28c-4526-924b-fb5fe3573736",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChooseUp",
                    "type": "Value",
                    "id": "881f9e28-1c72-405c-9160-091e239a00f8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "ChooseLeft",
                    "type": "Value",
                    "id": "e3ac75f8-1fd0-4c13-aa91-c2049a9bdd65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "ChooseDown",
                    "type": "Value",
                    "id": "6d70f008-6b30-4805-8efa-66d0eb7ebb1b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "ChooseRight",
                    "type": "Value",
                    "id": "5139174a-363b-4ffb-9761-8aebce8873b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "5c7fb0d3-7b92-4c53-90c5-1f77e1bc2c26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartBattle",
                    "type": "Button",
                    "id": "0a1c9741-1248-40fc-b31c-ee5b649a890a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5bd26993-0661-42da-a763-1234f16e4852",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0c02db6-a231-4e9c-a1c1-5689193fd69a",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e95cb70-6f96-429b-a1d7-ef8413a233fe",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChooseUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2b9c3de-569d-4194-a919-11db2a06b824",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChooseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0764b496-dbdf-4413-8546-c524b92309ea",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChooseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56da10d4-7a73-492d-8a90-90e31adcd788",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChooseRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d293f9c-3851-4691-9b38-c505be9ed59e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8bdac22-b945-4e73-b19b-a71c408f0245",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0713043-5eef-4300-87c1-029c0f0a6637",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartBattle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}